# gone-fishing-mcp

./: .env__COPY_ME  README.md  main.py  mcp_server.py  pyproject.toml  requirements.txt
src/: main.py  utils.py
src/api/: routes.py  usgs_api.py  weather_api.py
src/core/: config.py
src/services/: llm_service.py  usgs_service.py  weather_service.py
