[project]
name = "gone-fishing-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "mcp[cli]>=1.10.1",
    "pip>=25.1.1",
    "python-dotenv>=1.1.1",
    "spacy[apple]>=3.8.7",
    "uvicorn[standard]>=0.35.0",
]
